examples/bad/06-ReturnOmitted.tms
int x() {
  if (false) {
    return 1;
  }
}

void main() {
  printInt(x());
  return;
}